fix(no-akka):removing guava and unncessary util libraries, formatting https://github.com/gbif/occurrence/issues/556